--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ android {
             if (project.hasProperty("RELEASE_STORE_FILE")) {
                 signingConfig signingConfigs.myConfig
             }
-            applicationIdSuffix '.legado'
+            applicationIdSuffix '.release'
 
             minifyEnabled true
             shrinkResources true
@@ -87,7 +87,7 @@ android {
             if (project.hasProperty("RELEASE_STORE_FILE")) {
                 signingConfig signingConfigs.myConfig
             }
-            applicationIdSuffix '.legado.debug'
+            applicationIdSuffix '.debug'
             versionNameSuffix 'debug'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro', 'cronet-proguard-rules.pro'
